# oxc_prettier-doc-viewer

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
src/: app.html
src/lib/: formatter.ts
src/oxc_prettier_wasm/: Cargo.toml
src/oxc_prettier_wasm/src/: lib.rs
src/routes/: +layout.svelte  +page.svelte
