[package]
name    = "oxc_prettier_wasm"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oxc          = { path = "../../../oxc/crates/oxc", features = ["serialize"] }
oxc_prettier = { path = "../../../oxc/crates/oxc_prettier" }
wasm-bindgen = "0.2.100"
tsify        = "0.4.5"
